# RAG-Demo

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  demo_all_rag_systems.py  demo_vanilla_rag.py  environment.yml  pyproject.toml  requirements.txt  test_setup.py
config/: default_config.yaml
core/: __init__.py  chunking_engine.py  context_engineer.py  data_models.py  document_processor.py  embedding_system.py  exceptions.py  interfaces.py
evaluation/: __init__.py  rag_comparator.py
graph_rag/: __init__.py  entity_extractor.py  graph_rag.py  knowledge_graph.py
hierarchical_rag/: __init__.py  hierarchical_rag.py
src/core/: chunking_engine.py  context_engineer.py  data_models.py  document_processor.py  embedding_system.py  exceptions.py  interfaces.py
src/evaluation/: __init__.py  rag_comparator.py
src/graph_rag/: __init__.py  entity_extractor.py  graph_rag.py  knowledge_graph.py
src/hierarchical_rag/: __init__.py  hierarchical_rag.py
src/utils/: config_manager.py  file_utils.py  logging_utils.py  text_utils.py
src/vanilla_rag/: __init__.py  vanilla_rag.py
tests/: test_api.py  test_core_components.py  test_openai_comprehensive.py  test_openai_integration.py  test_vanilla_rag.py  verify_structure.py
utils/: config_manager.py  file_utils.py  logging_utils.py  text_utils.py
vanilla_rag/: __init__.py  vanilla_rag.py
